adiciona e corrige algumas animações

--- a/frontend/src/app/routes/test/code-result/code-result.component.html
+++ b/frontend/src/app/routes/test/code-result/code-result.component.html
@@ -1,7 +1,7 @@
 <body>
     <div class="container-edge">
         <div class="container">
-            <div class="big-logo">
+            <div class="big-logo animate__animated animate__pulse animate__infinite animate__slow">
                 <img src="./../../../../assets/images/logos/logo-verse.png">
             </div>
             <div class="screen-info">
@@ -9,7 +9,7 @@
                 <h2>Informe o seu código de usuário para ver o seu resultado!</h2>
             </div>
             
-            <div class="card">
+            <div class="card animate__animated animate__fadeInUp">
                 <div class="card-text">
                     <h3>Seu código</h3>
                     <h4>de 3 caracteres</h4>
