--- a/frontend/src/app/routes/test/personality/personality.component.html
+++ b/frontend/src/app/routes/test/personality/personality.component.html
@@ -1,10 +1,3 @@
-<head>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-    />
-  </head>
-
 <body>
     <div class="container-edge">
         <div class="header">
@@ -21,7 +14,7 @@
         </div>
         <div class="container">
             <h2>Galáxia</h2>
-            <div class="card">
+            <div class="card animate__animated animate__fadeInDown" style="animation-delay: 200ms;">
                 <button (click)="goToPersonality(1)" [disabled]="completionStatus['R']" [ngClass]="{'disabled-button': completionStatus['R']}">
                     <div style="display: flex; justify-content: space-between; align-items: center; text-align: left">
                         <div>
@@ -41,9 +34,9 @@
                 </button>
             </div>
 
-            <img class="dots" src="../../../../assets/images/icons/rocket.svg">
+            <img class="dots animate__animated animate__fadeInDown" style="animation-delay: 700ms;" src="../../../../assets/images/icons/rocket.svg">
             
-            <div class="card">
+            <div class="card animate__animated animate__fadeInDown" style="animation-delay: 500ms;">
                 <button (click)="goToPersonality(2)" [disabled]="completionStatus['I']" [ngClass]="{'disabled-button': completionStatus['I']}">
                     <div style="display: flex; justify-content: space-between; align-items: center; text-align: left">
                         <div>
@@ -63,9 +56,9 @@
                 </button>
             </div>
 
-            <img class="dots" src="../../../../assets/images/icons/rocket.svg">
+            <img class="dots animate__animated animate__fadeInDown" style="animation-delay: 1100ms;" src="../../../../assets/images/icons/rocket.svg">
             
-            <div class="card">
+            <div class="card animate__animated animate__fadeInDown" style="animation-delay: 800ms;">
                 <button (click)="goToPersonality(3)" [disabled]="completionStatus['A']" [ngClass]="{'disabled-button': completionStatus['A']}">
                     <div style="display: flex; justify-content: space-between; align-items: center; text-align: left">
                         <div>
@@ -85,9 +78,9 @@
                 </button>
             </div>
 
-            <img class="dots" src="../../../../assets/images/icons/rocket.svg">
+            <img class="dots animate__animated animate__fadeInDown" style="animation-delay: 1400ms;" src="../../../../assets/images/icons/rocket.svg">
             
-            <div class="card">
+            <div class="card animate__animated animate__fadeInDown" style="animation-delay: 1100ms;">
                 <button (click)="goToPersonality(4)" [disabled]="completionStatus['S']" [ngClass]="{'disabled-button': completionStatus['S']}">
                     <div style="display: flex; justify-content: space-between; align-items: center; text-align: left">
                         <div>
@@ -107,9 +100,9 @@
                 </button>
             </div>
 
-            <img class="dots" src="../../../../assets/images/icons/rocket.svg">
+            <img class="dots animate__animated animate__fadeInDown" style="animation-delay: 1700ms;" src="../../../../assets/images/icons/rocket.svg">
             
-            <div class="card">
+            <div class="card animate__animated animate__fadeInDown" style="animation-delay: 1400ms;">
                 <button (click)="goToPersonality(5)" [disabled]="completionStatus['E']" [ngClass]="{'disabled-button': completionStatus['E']}">
                     <div style="display: flex; justify-content: space-between; align-items: center; text-align: left">
                         <div>
@@ -129,9 +122,9 @@
                 </button>
             </div>
 
-            <img class="dots" src="../../../../assets/images/icons/rocket.svg">
+            <img class="dots animate__animated animate__fadeInDown" style="animation-delay: 2000ms;" src="../../../../assets/images/icons/rocket.svg">
             
-            <div class="card">
+            <div class="card animate__animated animate__fadeInDown" style="animation-delay: 1700ms;">
                 <button (click)="goToPersonality(6)" [disabled]="completionStatus['C']" [ngClass]="{'disabled-button': completionStatus['C']}">
                     <div style="display: flex; justify-content: space-between; align-items: center; text-align: left">
                         <div>
