--- a/frontend/src/app/routes/test/creation/test-creation.component.html
+++ b/frontend/src/app/routes/test/creation/test-creation.component.html
@@ -1,7 +1,7 @@
 <body>
     <div class="container-edge">
         <div class="container">
-            <div class="big-logo">
+            <div class="big-logo animate__animated animate__pulse animate__infinite animate__slow">
                 <img src="./../../../../assets/images/logos/logo-verse.png">
             </div>
             <div class="screen-info">
@@ -9,7 +9,7 @@
                 <h2>Informe seu nome para começar um novo teste!</h2>
             </div>
             
-            <div class="card">
+            <div class="card animate__animated animate__fadeInUp">
                 <div class="card-text">
                     <h3>Seu nome</h3>
                 </div>
