Revert "adiciona e corrige algumas animações"
This reverts commit 2ce31a779c31211c02173901274caf805db49e51.

--- a/frontend/src/app/routes/test/continuation/test-continuation.component.html
+++ b/frontend/src/app/routes/test/continuation/test-continuation.component.html
@@ -9,7 +9,7 @@
                 <h2>Informe o seu código de usuário para continuar o teste!</h2>
             </div>
             
-            <div class="card animate__animated animate__fadeInUp">
+            <div class="card animate__animated animate__backInUp">
                 <div class="card-text">
                     <h3>Seu código</h3>
                     <h4>de 3 caracteres</h4>
