--- a/frontend/src/app/routes/test/personality/personality.component.html
+++ b/frontend/src/app/routes/test/personality/personality.component.html
@@ -1,3 +1,10 @@
+<head>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+  </head>
+
 <body>
     <div class="container-edge">
         <div class="header">
@@ -14,7 +21,7 @@
         </div>
         <div class="container">
             <h2>Galáxia</h2>
-            <div class="card animate__animated animate__fadeInDown" style="animation-delay: 200ms;">
+            <div class="card">
                 <button (click)="goToPersonality(1)" [disabled]="completionStatus['R']" [ngClass]="{'disabled-button': completionStatus['R']}">
                     <div style="display: flex; justify-content: space-between; align-items: center; text-align: left">
                         <div>
@@ -34,9 +41,9 @@
                 </button>
             </div>
 
-            <img class="dots animate__animated animate__fadeInDown" style="animation-delay: 700ms;" src="../../../../assets/images/icons/rocket.svg">
+            <img class="dots" src="../../../../assets/images/icons/rocket.svg">
             
-            <div class="card animate__animated animate__fadeInDown" style="animation-delay: 500ms;">
+            <div class="card">
                 <button (click)="goToPersonality(2)" [disabled]="completionStatus['I']" [ngClass]="{'disabled-button': completionStatus['I']}">
                     <div style="display: flex; justify-content: space-between; align-items: center; text-align: left">
                         <div>
@@ -56,9 +63,9 @@
                 </button>
             </div>
 
-            <img class="dots animate__animated animate__fadeInDown" style="animation-delay: 1100ms;" src="../../../../assets/images/icons/rocket.svg">
+            <img class="dots" src="../../../../assets/images/icons/rocket.svg">
             
-            <div class="card animate__animated animate__fadeInDown" style="animation-delay: 800ms;">
+            <div class="card">
                 <button (click)="goToPersonality(3)" [disabled]="completionStatus['A']" [ngClass]="{'disabled-button': completionStatus['A']}">
                     <div style="display: flex; justify-content: space-between; align-items: center; text-align: left">
                         <div>
@@ -78,9 +85,9 @@
                 </button>
             </div>
 
-            <img class="dots animate__animated animate__fadeInDown" style="animation-delay: 1400ms;" src="../../../../assets/images/icons/rocket.svg">
+            <img class="dots" src="../../../../assets/images/icons/rocket.svg">
             
-            <div class="card animate__animated animate__fadeInDown" style="animation-delay: 1100ms;">
+            <div class="card">
                 <button (click)="goToPersonality(4)" [disabled]="completionStatus['S']" [ngClass]="{'disabled-button': completionStatus['S']}">
                     <div style="display: flex; justify-content: space-between; align-items: center; text-align: left">
                         <div>
@@ -100,9 +107,9 @@
                 </button>
             </div>
 
-            <img class="dots animate__animated animate__fadeInDown" style="animation-delay: 1700ms;" src="../../../../assets/images/icons/rocket.svg">
+            <img class="dots" src="../../../../assets/images/icons/rocket.svg">
             
-            <div class="card animate__animated animate__fadeInDown" style="animation-delay: 1400ms;">
+            <div class="card">
                 <button (click)="goToPersonality(5)" [disabled]="completionStatus['E']" [ngClass]="{'disabled-button': completionStatus['E']}">
                     <div style="display: flex; justify-content: space-between; align-items: center; text-align: left">
                         <div>
@@ -122,9 +129,9 @@
                 </button>
             </div>
 
-            <img class="dots animate__animated animate__fadeInDown" style="animation-delay: 2000ms;" src="../../../../assets/images/icons/rocket.svg">
+            <img class="dots" src="../../../../assets/images/icons/rocket.svg">
             
-            <div class="card animate__animated animate__fadeInDown" style="animation-delay: 1700ms;">
+            <div class="card">
                 <button (click)="goToPersonality(6)" [disabled]="completionStatus['C']" [ngClass]="{'disabled-button': completionStatus['C']}">
                     <div style="display: flex; justify-content: space-between; align-items: center; text-align: left">
                         <div>
