--- a/frontend/src/app/routes/test/creation/test-creation.component.scss
+++ b/frontend/src/app/routes/test/creation/test-creation.component.scss
@@ -1,7 +1,177 @@
+body {
+  background-color: #0C1020;
+}
+
+.container-edge {
+  background-image: url(../../../../assets/images/backgrounds/galaxy-5.svg);
+  min-height: 100vh;
+  background-color: #161D39;
+  position: relative;
+  max-width: 853px;
+  margin: 0 auto;
+  border: 1px solid rgba(255, 255, 255, 0.05);
+}
+
+.header {
+  display: flex;
+  justify-content: center;
+  max-width: 853px;
+  margin: 0 auto 18px auto;
+  padding: 48px 24px;
+}
+
+.container {
+  width: 100%;
+  max-width: 393px;
+  margin: 0 auto;
+  padding-bottom: 88px;
+}
+
 .big-logo img {
   max-width: 250px;
 }
 
 .screen-info {
   margin: 0 24px;
+}
+
+h1 {
+  color: #FFF;
+  font-family: Fredoka;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 16px; 
+  opacity: 0.7;
+}
+
+h2 {
+  color: #FFF;
+  font-family: Fredoka;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 25.5px;
+  margin-bottom: 32px;
+}
+
+.card {
+  border-radius: 24px;
+  border: 1px solid rgba(255, 255, 255, 0.05);
+  background: linear-gradient(180deg, #252C4A 0%, #252C4A 100%, #252C4A 100%);
+  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.25);
+  margin: 0 18px;
+}
+
+.card-text {
+  display: flex;
+  gap: 10px;
+  margin: 24px 4px 4px 24px;
+  align-items: flex-end;
+  text-align: left;
+}
+
+h3 {
+  color: #FFF;
+  font-family: Fredoka;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 16px;
+}
+
+h4 {
+  color: rgba(255, 255, 255, 0.50);
+  font-family: Fredoka;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 16px;
+}
+
+#card-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-family: Fredoka;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 16px;
+}
+
+.mat-form-field input{
+  width: 100%;
+  max-width: 300px;
+  border-radius: 50px;
+}
+
+#card-form-submit-button {
+  margin-top: 20px;
+}
+
+.card-form-field-label {
+  font-family: Fredoka;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 16px;
+}
+
+#card-form-submit-button {
+  background-color: #676F94;
+  border: 1px solid rgba(255, 255, 255, 0.10);
+  color: #FFF;
+  font-family: Fredoka;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  letter-spacing: 0px;
+  border-radius: 999px;
+  padding: 24px 42px;
+  margin-top: 20px;
+}
+
+.text-link {
+  color: rgba(255, 255, 255, 0.50);
+  font-family: Fredoka;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 16px;
+  display: block;
+  text-align: center;
+  margin: 18px 24px 20px 24px;
+}
+
+#return-button {
+  border-radius: 16px 16px 0px 0px;
+  background: #F66103;
+  width: 64px;
+  height: 64px;
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 36px;
+  cursor: pointer;
+}
+
+.planets {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
+}
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%;
+  max-width: 742px;
+  display: flex;
+  justify-content: flex-start;
 }
