--- a/frontend/src/app/routes/test/statement/statement.component.html
+++ b/frontend/src/app/routes/test/statement/statement.component.html
@@ -14,8 +14,8 @@
   </div>
 
   <div class="container">
-    <div class="card">
-      <div class="current">
+    <div class="card" style="margin-bottom: 16px;">
+      <div style="display: flex; justify-content: space-between; align-items: center;">
         <div>
           <h4>Planeta</h4>
           <div class="phase-name">
@@ -24,9 +24,9 @@
         </div>
         <img src="../../../../assets/images/items/bike.png">
       </div>
-      <div class="current">
+      <div style="display: flex; justify-content: space-between; align-items: flex-end;">
         <h4>Progresso</h4>
-        <h4>
+        <h4 style="color: #FFF; margin-left: 0px;">
           Questão {{ currentQuestionNumber }}
         </h4>
       </div>
@@ -36,9 +36,9 @@
     </div>
 
     <div class="card">
-      <div>
+      <div class="card-text">
         <h2>Cenário</h2>
-        <h3>{{ statement?.storyText }}</h3>
+        <h3 style="margin-top: 8px; margin-bottom: 16px">{{ statement?.storyText }}</h3>
       </div>  
 
       <div class="text">
