--- a/frontend/src/app/routes/test/info-history/info-history.component.scss
+++ b/frontend/src/app/routes/test/info-history/info-history.component.scss
@@ -1,9 +1,3 @@
-mat-dialog-content {
-  width: 100%; /* Ajuste a largura conforme necessário */
-  max-width: 800px; /* Defina um valor máximo para a largura */
-  margin: auto; /* Centralize o conteúdo horizontalmente */
-}
-
 .content {
     display: flex;
     flex-direction: column;
@@ -13,9 +7,8 @@ mat-dialog-content {
   
   .p-content {
     font-family: 'Modulus Pro', sans-serif;
-    font-size: 18px;
-    text-align: center;
-    color: rgb(25, 24, 23);
+    font-size: 15px;
+    text-align: justify;
   }
 
   .finish {
