--- a/frontend/src/app/routes/test/info/test-info.component.html
+++ b/frontend/src/app/routes/test/info/test-info.component.html
@@ -1,22 +1,27 @@
 <mat-dialog-content class="mat-typography">
     <div class="content">
         <h3 class="title">
-            Bem-vindo ao UniVerse: A Ilha da Vocação!
+            {{this.title}}
         </h3>
         <p class="p-content">
-            <b>{{ this.username }}</b>, você é um intrépido explorador em busca de autodescoberta, decide embarcar em uma aventura única e transformadora. Em um misterioso dia, um mapa chega às suas mãos, levando-o a uma ilha desconhecida chamada UniVerse. A ilha é lendária por abrigar seis cantos distintos, vilas, cada um representando uma área única de vocação.
-
+            O UniVerse é um teste vocacional gamificado que tem como objetivo ajudá-lo de forma lúdica e interativa a descobrir a melhor área ou curso que combina com seu perfil.
+        </p>
+        <p class="title">
+            Como jogar:
         </p>
         <p class="p-content">
-            Agora, aperte o cinto, mergulhe no mundo do UniVerse!
+            O teste contém seis fases, cada uma contendo suas perguntas e contextos. Para avançar, é necessário concluir as fases anteriores. Após ter concluído todas as fases, você receberá o resultado final, onde poderá conferir as principais áreas que combinam com seu perfil e uma lista de cursos de graduação da UFSM dessas respectivas áreas.
         </p>
         <p class="p-content">
-            Bom jogo!
+            Agora, aperte o cinto, mergulhe no mundo do UniVerse, onde você está em uma ilha repleta de desafios e aventuras!
+        </p>
+        <p class="p-content">
+            Bom teste!
         </p>
         <div class="example-button-row">
             <button mat-button mat-dialog-close style="background-color: #3C6A54;">
                 <p class="btn">
-                    Começar
+                    Próximo
                 </p>
             </button>
         </div>
