Revert "novo front"
This reverts commit 19b668176e23b2d81134c236cbc967aa0dfd983b.

--- a/frontend/src/app/routes/test/code-result/code-result.component.html
+++ b/frontend/src/app/routes/test/code-result/code-result.component.html
@@ -1,33 +1,36 @@
 <body>
-    <div class="container-edge">
-        <div class="header">
-            <div class="big-logo">
-                <img src="./../../../../assets/images/logos/logo-verse.png">
-            </div>
-        </div>
-        
-        <div class="container">
-            <div class="screen-info">
-                <h1>Ver meu resultado</h1>
-                <h2>Informe o seu código de usuário para ver o seu resultado!</h2>
-            </div>
-            
-            <div class="card">
-                <div class="card-text">
-                    <h3>Seu código</h3>
-                    <h4>de 3 caracteres</h4>
+    <div class="back">
+        <a routerLink="/">
+            <button mat-icon-button>
+                <mat-icon class="material-icons color_white">
+                    arrow_back_ios
+                </mat-icon>
+            </button>
+        </a>
+        <br>
+    </div>
+    <div id="test-continuation-container">
+        <mat-card id="card">
+            <mat-card-content id="card-content">
+                <div id="card-text">
+                    <div id="card-title">
+                        Verificar resultado
+                    </div>
+                    <div id="card-description">
+                        Informe o seu código de usuário para verificar o seu resultado
+                    </div>
                 </div>
-                
                 <form #loginForm="ngForm" (ngSubmit)="onSubmit()">
                     <div id="card-form">
-                        <mat-form-field class="card-form-field" style="width: 86% !important;">
+                        <mat-form-field class="card-form-field">
                             <mat-label class="card-form-field-label">
-                                Digite aqui
+                                Código
                             </mat-label>
                             <input
                                 matInput
                                 [(ngModel)]="userCode"
                                 name="userCode"
+                                required
                             >
                             <mat-error
                                 class="card-form-field-error-message"
@@ -36,6 +39,9 @@
                                 Informe um código
                             </mat-error>
                         </mat-form-field>
+                        <a href="/test/new">
+                            Não possui um código? Clique aqui para iniciar um novo teste!
+                        </a>
                         <button
                             id="card-form-submit-button"
                             mat-flat-button
@@ -47,20 +53,7 @@
                         </button>
                     </div>
                 </form>
-
-                <a class="text-link" href="/test/new">
-                    Não possui um código?
-                </a>
-            </div>
-        </div>
-
-        <div class="footer">
-            <a class="button-link" routerLink="/">
-                <button id="return-button">
-                    <img src="./../../assets/images/icons/arrow_circle_left.svg" alt="Ícone de voltar">
-                </button>
-            </a>  
-            <img class="planets" src="./../../assets/images/items/planets.svg">      
-        </div>
+            </mat-card-content>
+        </mat-card>
     </div>
 </body>
