--- a/frontend/src/app/routes/home/home.component.html
+++ b/frontend/src/app/routes/home/home.component.html
@@ -1,33 +1,27 @@
-<header>
-    <head>
-        <link
-          rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-        />
-      </head>
-</header>
-
 <body>
-    <div class="container-edge">
-        <div class="container" style="text-align: center;">
-            <div class="big-logo animate__animated animate__zoomInDown">
-                <img class="animate__animated animate__pulse animate__infinite animate__slow" src="./../../../../assets/images/logos/logo-verse.png">
+    <div id="container">
+        <div id="title">
+            UniVerse
+        </div>
+        <div id="buttons-container">
+            <div class="button-container" id="new-test-button-container">
+                <a class="button-link" routerLink="/test/new">
+                    <button id="new-test-button" mat-raised-button color="primary">
+                        Iniciar teste
+                    </button>
+                </a>
             </div>
-            <div class="buttons">
-                <a class="button-link animate__animated animate__fadeIn" style="animation-delay: 500ms;" routerLink="/test/new">
-                    <button id="create-game-button" mat-raised-button color="primary">
-                        Criar um novo jogo
+            <div class="button-container" id="continue-test-button-container">
+                <a class="button-link" routerLink="/test/continue">
+                    <button id="continue-test-button" mat-raised-button color="primary">
+                        Continuar teste
                     </button>
                 </a>
-
-                <a class="button-link animate__animated animate__fadeIn" style="animation-delay: 700ms;" routerLink="/test/continue">
-                    <button id="continue-game-button" mat-raised-button color="primary">
-                        Continuar um jogo
-                    </button>
-                </a>
-                <a class="button-link animate__animated animate__fadeIn" style="animation-delay: 900ms;" routerLink="/test/code-result">
-                    <button id="result-game-button" mat-raised-button color="primary">
-                        Ver meu resultado
+            </div>
+            <div class="button-container" id="test-result-button-container">
+                <a class="button-link" routerLink="/test/code-result">
+                    <button id="test-result-button" mat-raised-button color="accent">
+                        Ver resultado
                     </button>
                 </a>
             </div>
