--- a/frontend/src/app/routes/test/creation/test-creation.component.html
+++ b/frontend/src/app/routes/test/creation/test-creation.component.html
@@ -1,27 +1,30 @@
 <body>
-    <div class="container-edge">
-        <div class="header">
-            <div class="big-logo">
-                <img src="./../../../../assets/images/logos/logo-verse.png">
-            </div>
-        </div>
-        
-        <div class="container">
-            <div class="screen-info">
-                <h1>Criar um novo jogo</h1>
-                <h2>Informe seu nome para começar um novo teste!</h2>
-            </div>
-            
-            <div class="card">
-                <div class="card-text">
-                    <h3>Seu nome</h3>
+    <div class="back">
+        <a routerLink="../../">
+            <button mat-icon-button>
+                <mat-icon class="material-icons color_white">
+                    arrow_back_ios
+                </mat-icon> 
+            </button>
+        </a>
+        <br>            
+    </div>
+    <div id="test-creation-container">
+        <mat-card id="card">
+            <mat-card-content id="card-content">
+                <div id="card-text">
+                    <div id="card-title">
+                        Iniciar teste
+                    </div>
+                    <div id="card-description">
+                        Preencha o formulário abaixo para iniciar um novo teste!
+                    </div>
                 </div>
-
                 <form #form="ngForm" (ngSubmit)="onSubmit()">
                     <div id="card-form">
-                        <mat-form-field class="card-form-field" style="width: 86% !important;">
+                        <mat-form-field class="card-form-field">
                             <mat-label class="card-form-field-label">
-                                Digite aqui
+                                Username
                             </mat-label>
                             <input
                                 class="card-form-field-input"
@@ -29,6 +32,7 @@
                                 name="username"
                                 [(ngModel)]="testCreationDTO.username"
                                 #username="ngModel"
+                                required
                             >
                             <mat-error
                                 class="card-form-field-error-message"
@@ -37,13 +41,9 @@
                                 Informe um username
                             </mat-error>
                         </mat-form-field>
-                        <!--<div class="card-text">
-                            <h3>E-mail</h3>
-                            <h4>não é obrigatório</h4>
-                        </div>
-                        <mat-form-field class="card-form-field" style="width: 86% !important;">
+                        <mat-form-field class="card-form-field">
                             <mat-label class="card-form-field-label">
-                                universe@universe.com
+                                Email
                             </mat-label>
                             <input
                                 class="card-form-field-input"
@@ -52,7 +52,7 @@
                                 [(ngModel)]="testCreationDTO.email"
                                 #email="ngModel"
                             >
-                        </mat-form-field>-->
+                        </mat-form-field>
                         <button
                             id="card-form-submit-button"
                             mat-flat-button
@@ -64,20 +64,7 @@
                         </button>
                     </div>
                 </form>
-
-                <a class="text-link" href="/test/continue">
-                    Já possui um código?
-                </a>
-            </div>
-        </div>
-
-        <div class="footer">
-            <a class="button-link" routerLink="/">
-                <button id="return-button">
-                    <img src="./../../assets/images/icons/arrow_circle_left.svg" alt="Ícone de voltar">
-                </button>
-            </a>  
-            <img class="planets" src="./../../assets/images/items/planets.svg">      
-        </div>
+            </mat-card-content>
+        </mat-card>
     </div>
 </body>
