--- a/styles/css/info-history.component.css
+++ b/styles/css/info-history.component.css
@@ -1,3 +1,10 @@
+@charset "UTF-8";
+mat-dialog-content {
+  width: 100%; /* Ajuste a largura conforme necessário */
+  max-width: 800px; /* Defina um valor máximo para a largura */
+  margin: auto; /* Centralize o conteúdo horizontalmente */
+}
+
 .content {
   display: flex;
   flex-direction: column;
@@ -6,19 +13,25 @@
 }
 
 .p-content {
-  font-family: 'Modulus Pro', sans-serif;
+  font-family: "Modulus Pro", sans-serif;
   font-size: 18px;
   text-align: center;
+  color: rgb(25, 24, 23);
 }
 
-.title {
+.finish {
   font-weight: bold;
+}
+
+.code {
+  font-weight: bold;
+  font-size: 25px;
 }
 
 .btn {
   margin-top: 10px;
   color: white;
-  font-family: 'Modulus Pro', sans-serif;
+  font-family: "Modulus Pro", sans-serif;
   text-align: center;
 }
 
@@ -26,9 +39,19 @@
   height: 30%;
   font-size: 15px;
   border-radius: 50px;
-  font-family: 'Modulus Pro', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Modulus Pro", Tahoma, Geneva, Verdana, sans-serif;
   padding-left: 25px;
   padding-right: 25px;
+}
+
+.button {
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+.p-warning {
+  font-style: italic;
+  font-size: 10px;
 }
 
 body::before {
@@ -60,9 +83,9 @@ body::after {
   z-index: 2;
 }
 
-.info{
-  position: fixed; 
-  bottom: 0; 
+.info {
+  position: fixed;
+  bottom: 0;
   right: 0;
   margin-right: 10px;
   margin-bottom: 10px;
@@ -80,7 +103,7 @@ body::after {
 
 #title {
   color: #ffffff;
-  font-family: 'Modulus Pro', sans-serif;
+  font-family: "Modulus Pro", sans-serif;
   font-size: 40px;
   font-weight: 600;
   letter-spacing: 5px;
@@ -98,7 +121,7 @@ body::after {
 
 @media only screen and (max-width: 600px) {
   #title {
-      font-size: 65px;
-      letter-spacing: 5px;
+    font-size: 65px;
+    letter-spacing: 5px;
   }
 }
