--- a/styles/css/statement.component.css
+++ b/styles/css/statement.component.css
@@ -5,7 +5,7 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   display: flex;
-  font-family: 'Modulus Pro', sans-serif;
+  font-family: "Modulus Pro", sans-serif;
   height: 100vh;
   justify-content: center;
   width: 100vw;
@@ -46,7 +46,7 @@ body {
 
 h2 {
   color: #13432c;
-  font-family: 'Modulus Pro', sans-serif;
+  font-family: "Modulus Pro", sans-serif;
   font-weight: bold;
   font-size: 20px;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -59,7 +59,7 @@ h2 {
 
 .button {
   color: #ffffff;
-  font-family: 'Modulus Pro', sans-serif;
+  font-family: "Modulus Pro", sans-serif;
   font-size: 20px;
   font-weight: bold;
   margin-top: 20px;
@@ -67,7 +67,7 @@ h2 {
 
 .text {
   color: #13432c;
-  font-family: 'Modulus Pro', sans-serif;
+  font-family: "Modulus Pro", sans-serif;
   text-align: center;
   font-size: 20px;
   font-weight: bold;
@@ -85,7 +85,7 @@ h2 {
 .option {
   color: #181515;
   text-align: left;
-  font-family: 'Modulus Pro', sans-serif;
+  font-family: "Modulus Pro", sans-serif;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   font-size: 20px;
   font-style: normal;
@@ -151,7 +151,7 @@ h2 {
 
 #title {
   color: #ffffff;
-  font-family: 'Modulus Pro', sans-serif;
+  font-family: "Modulus Pro", sans-serif;
   font-size: 50px;
   font-weight: 600;
   letter-spacing: 5px;
@@ -171,17 +171,16 @@ h2 {
     letter-spacing: 5px;
   }
 }
-
 .question-number {
   color: #13432c;
-  font-family: 'Modulus Pro', sans-serif;
+  font-family: "Modulus Pro", sans-serif;
   font-size: 18px;
   font-weight: bold;
 }
 
 .phase-name {
   color: #13432c;
-  font-family: 'Modulus Pro', sans-serif;
+  font-family: "Modulus Pro", sans-serif;
   font-size: 18px;
   font-weight: bold;
 }
