--- a/styles/css/test-info.component.css
+++ b/styles/css/test-info.component.css
@@ -6,7 +6,7 @@
 }
 
 .p-content {
-  font-family: 'Modulus Pro', sans-serif;
+  font-family: "Modulus Pro", sans-serif;
   font-size: 18px;
   text-align: center;
 }
@@ -18,7 +18,7 @@
 .btn {
   margin-top: 10px;
   color: white;
-  font-family: 'Modulus Pro', sans-serif;
+  font-family: "Modulus Pro", sans-serif;
   text-align: center;
 }
 
@@ -26,7 +26,7 @@
   height: 30%;
   font-size: 15px;
   border-radius: 50px;
-  font-family: 'Modulus Pro', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Modulus Pro", Tahoma, Geneva, Verdana, sans-serif;
   padding-left: 25px;
   padding-right: 25px;
 }
@@ -60,9 +60,9 @@ body::after {
   z-index: 2;
 }
 
-.info{
-  position: fixed; 
-  bottom: 0; 
+.info {
+  position: fixed;
+  bottom: 0;
   right: 0;
   margin-right: 10px;
   margin-bottom: 10px;
@@ -80,7 +80,7 @@ body::after {
 
 #title {
   color: #ffffff;
-  font-family: 'Modulus Pro', sans-serif;
+  font-family: "Modulus Pro", sans-serif;
   font-size: 40px;
   font-weight: 600;
   letter-spacing: 5px;
@@ -98,7 +98,7 @@ body::after {
 
 @media only screen and (max-width: 600px) {
   #title {
-      font-size: 65px;
-      letter-spacing: 5px;
+    font-size: 65px;
+    letter-spacing: 5px;
   }
 }
