--- a/frontend/src/app/routes/test/info-code/info-code.component.scss
+++ b/frontend/src/app/routes/test/info-code/info-code.component.scss
@@ -1,41 +1,11 @@
-.content {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    align-items: center;
-  }
-  
-  .p-content {
-    font-family: 'Modulus Pro', sans-serif;
-    font-size: 15px;
-    text-align: justify;
-  }
+.container {
+  text-align: center;
+} 
 
-  .title {
-    font-weight: bold;
-  }
-
-  .code {
-    font-weight: bold;
-    font-size: 25px;
-  }
-  
-  .btn {
-    margin-top: 10px;
-    color: white;
-    font-family: 'Modulus Pro', sans-serif;
-    text-align: center;
-  }
-  
-  .example-button-row button {
-    height: 30%;
-    font-size: 15px;
-    border-radius: 50px;
-    font-family: 'Modulus Pro', Tahoma, Geneva, Verdana, sans-serif;
-    padding-left: 25px;
-    padding-right: 25px;
-  }
-  
+.meu-dialogo.mat-dialog-container {
+  background-color: transparent !important;
+  box-shadow: none !important;
+}
 
   body::before {
     content: "";
@@ -77,34 +47,4 @@
   
   .bold {
     font-weight: bold;
-  }
-  
-  #card {
-    background-color: rgba(255, 255, 255, 0.6);
-    z-index: 2;
-  }
-  
-  #title {
-    color: #ffffff;
-    font-family: 'Modulus Pro', sans-serif;
-    font-size: 40px;
-    font-weight: 600;
-    letter-spacing: 5px;
-    text-shadow: 1px 3px 5px rgba(48, 29, 29, 0.25);
-    text-align: center;
-    position: absolute;
-    margin-top: 10px;
-    top: 10px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 100%;
-    z-index: 2;
-    margin-top: 16px;
-  }
-  
-  @media only screen and (max-width: 600px) {
-    #title {
-        font-size: 65px;
-        letter-spacing: 5px;
-    }
   }
